...
        guard let statisticService = statisticService else {
            print("Не удалось получить статистику")
            return
        }
        statisticService.store(correct: correctAnswers, total: questionsAmount)
        
        let alert = AlertModel(title: "Этот раунд окончен!",
                               message: makeMessage(statisticService: statisticService,
                                                    correctAnswers: correctAnswers,
                                                    totalQuestions: self.questionsAmount),
                               buttonText: "Сыграть еще раз",
                               completion: { [weak self] in
            guard let self = self else {
...
